# local-pdf-rag-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
local_pdf_rag_mcp/: __init__.py  chunking.py  server.py  store.py
tests/: test_chunking.py
