[project]
name = "local-pdf-rag-mcp"
version = "0.1.0"
description = "A fully-local MCP server for question-answering over PDFs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arjun Vinod" }]
dependencies = [
    "mcp>=1.2.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "reportlab>=4.0",
]

[project.scripts]
local-pdf-rag-mcp = "local_pdf_rag_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["local_pdf_rag_mcp"]
